# code2nix

./: .editorconfig  .gitignore  Cargo.toml  README.md  current.nix  flake.nix  latest.nix  package.nix  pyproject.toml  test.sh
current/: extensions.nix
latest/: extensions.nix  package.nix
nix/: default.nix  package.nix  shell.nix
nix/devShells/: default.nix  extensions.nix  shell.nix
src/: args.rs  extension.rs  lib.rs  main.py  main.rs
src/api/: mod.rs  query.rs  response.rs
src/cli/: mod.rs
src/models/: extension.rs
src/nix/: mod.rs
test/: main.py
