[package]
name = "code2nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = [ "blocking" ] }
semver = "1.0.23"
serde_json = "1.0.117"
zip-extract = "0.1.3"
