[package]
name = "code2nix"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.142"
sha256 = { version = "1.6.0", default-features = false }
tempfile = "3.20.0"
